--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,9 @@ a {
     text-decoration: none;
     transition: color 0.2s ease, background 0.2s ease;
 }
+a:hover {
+    cursor: pointer;
+}
 
 /* FONTS */
 @font-face {
@@ -50,7 +53,7 @@ a {
 
 /* ROOT */
 :root {
-    --nav-bg: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2));
+    --nav-bg: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2));
     --nav-link: #909395;
     --nav-link-hover: white;
     --nav-link-active: white;
@@ -62,6 +65,12 @@ a {
     --hero-link-border: white;
     --hero-link-hover-text: #232323;
 
+    --section-bg-gray: #e6e6e6;
+    --section-bg-white: white;
+
+    --menu-bg: white;
+    --menu-text-span: #8a8a8a;
+
     --footer-bg: #232323;
     --footer-text: #8a8a8a;
     --footer-link: white;
@@ -72,16 +81,33 @@ a {
     font-family: 'Poppins', sans-serif;
 }
 
+html,
+#hero,
+#chef,
+#menu,
+#contact {
+    --scroll-behavior: smooth!important;
+    scroll-behavior: smooth!important;
+}
+
 hr {
     border: none;
     height: 1px;
     background: linear-gradient(to right, rgb(255,255,255,0.3), rgba(0,0,0, 0));
 }
 
+.title {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+.title h2 {
+    font-weight: 300;
+}
+
 /* NAVBAR */
 nav {
     background: var(--nav-bg);
-    backdrop-filter: blur(4px);
+    backdrop-filter: blur(8px);
     max-width: 100%;
     position: fixed;
     left: 0;
@@ -98,6 +124,7 @@ nav #links {
     gap: 2rem;
 }
 nav #links a {
+    text-shadow: 1px 1px 2px black;
     color: var(--nav-link);
     font-size: 1rem;
 }
@@ -178,6 +205,163 @@ nav img {
 .hero .hero-text a:hover {
     color: var(--hero-link-hover-text);
     background: var(--hero-link-border);
+}
+
+/* CHEF */
+.chef {
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 100%;
+    padding: 4rem;
+}
+
+.chef .img-wrapper {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.chef img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.chef .text-wrapper {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+}
+
+.chef #text h2 {
+    margin-bottom: 2rem;
+}
+
+.chef #text p {
+    word-spacing: 4px;
+    line-height: 1.4rem;
+}
+
+@media (max-width: 864px) {
+    .chef {
+        height: auto;
+        flex-direction: column;
+    }
+
+    .chef .img-wrapper {
+        height: auto;
+    }
+
+    .chef .text-wrapper {
+        width: calc(100% - 4rem);
+        padding: 2rem;
+    }
+    .chef .img-wrapper {
+        width: calc(100% - 4rem);
+        padding: 2rem;
+    }
+    .chef img {
+        height: auto;
+        width: 100%;
+    }
+}
+
+/* MENU */
+.menu {
+    padding: 4rem;
+    background: var(--section-bg-gray);
+}
+
+.menu .wrapper {
+    display: flex;
+    gap: 2rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu #border {
+    border: 1px solid black;
+}
+.menu .container {
+    padding: 4rem 2rem;
+    background: var(--menu-bg);
+}
+.menu .container h2 {
+    font-weight: 400;
+}
+.menu .container p {
+    font-weight: 400;
+    margin-top: 2rem;
+    margin-bottom: 0.4rem;
+}
+.menu .container i {
+    font-weight: 300;
+    color: var(--menu-text-span);
+}
+
+/* FOOD */
+.food {
+    padding: 4rem;
+    background: var(--section-bg-gray);
+}
+
+.food .wrapper {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.food .wrapper .container {
+    position: relative;
+    flex: 1;
+    max-width: 20rem;
+    height: 20rem;
+}
+
+.food .wrapper .container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.food .wrapper .container::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
+    z-index: 1;
+}
+
+.food .wrapper .container p {
+    font-size: 1.4rem;
+    position: absolute;
+    bottom: 0.4rem;
+    left: 0.4rem;
+    z-index: 2;
+    padding: 0.4rem;
+    color: white;
+    margin: 0;
+}
+
+/* CONTACT */
+.contact {
+    background: var(--section-bg-gray);
+}
+
+.contact .wrapper {
+    background: var(--section-bg-white);
+    padding: 4rem;
 }
 
 /* FOOTER */
