--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,7 @@ a:hover {
 
 * {
     font-family: 'Poppins', sans-serif;
+    transition: transform 0.2s ease-in-out;
 }
 
 html,
@@ -106,6 +107,11 @@ hr {
 }
 .title h2 {
     font-weight: 300;
+}
+
+button:hover,
+a:hover {
+    cursor: pointer;
 }
 
 /* NAVBAR */
@@ -433,11 +439,16 @@ nav img {
 }
 
 .food .wrapper .container {
+    overflow: hidden;
     position: relative;
     flex: 1 1 calc(33.33% - 1rem);
     max-width: calc(33.33% - 1rem);
     height: 20rem;
     margin-bottom: 1rem;
+}
+
+.food .wrapper .container:hover img {
+    transform: scale(1.2);
 }
 
 .food .wrapper .container img {
