--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,6 +254,8 @@ nav img {
     left: 0;
     width: 100%;
     height: 100%;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
     filter: brightness(40%) blur(4px);
 }
 
@@ -560,7 +562,7 @@ nav img {
     border: 1px solid var(--button-bg);
     background: var(--button-bg);
     color: var(--button-text);
-    border-radius: 0.5rem;
+    border-radius: 0.3rem;
     font-size: 1rem;
     cursor: pointer;
     text-transform: uppercase;
